[project]
authors = [{name = "Pablo Winant", email = "pablo.winant@gmail.com"}]
dependencies = []
name = "dynsym"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
dynsym = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
lark = ">=1.2.2,<2"
pyyaml = ">=6.0.2,<7"
interegular = ">=0.3.3,<0.4"
numpy = ">=2.3.2,<3"
rich = ">=14.1.0,<15"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest tests -s"

[tool.pixi.environments]
dev = ["test"]
